test/expected/set-error.out
cdecl> set expl
           ^
5: error: "expl": ambiguous set option; could be explicit-ecsu or explicit-int
cdecl> set expli
           ^
5: error: "expli": ambiguous set option; could be explicit-ecsu or explicit-int
cdecl> set lang=xxx
                ^
10: error: "xxx": unknown language
cdecl> set prompt=x
                  ^
12: error: "x": set option "prompt" takes no value
cdecl> set xxx
           ^
5: error: "xxx": unknown set option
